# xkseedy

./: Cargo.toml  README.md  flake.nix
src/: downloader.rs  lib.rs  main.rs
