[package]
name = "xkseedy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.2.1"
reqwest = { version = "0.11.13", features = ["socks"] }
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.88"
thiserror = "1.0.37"
tokio = { version = "1.22.0", features = ["full"] }
